--- a/slideshow.docbook
+++ b/slideshow.docbook
@@ -81,7 +81,7 @@ During slideshow, user can access to a tool bar on the upper left screen corner.
 </para>
 
 <para>
-With this tool bar, user can drive the progress, for pausing/playing slidesow, back to the preview image, go to the next image, and stoping slideshow.
+With this tool bar, user can drive the progress, for pausing/playing slideshow, back to the preview image, go to the next image, and stopping slideshow.
 </para>
 
 <para>
