--- a/index.docbook
+++ b/index.docbook
@@ -37,7 +37,7 @@
 <authorgroup>
     <author>
         <firstname>Gilles</firstname><surname>Caulier</surname>
-        <affiliation><address><email>caulier_dot_gilles_at_free.fr</email></address></affiliation>
+        <affiliation><address><email>caulier dot gilles at gmail dot com</email></address></affiliation>
     </author>
 
     <author>
@@ -208,7 +208,7 @@ Copyrights for each plugin is listed in the applicable chapter.
 </para>
 
 <para>
-All Pictures copyrighted 2004-2007 by Gilles Caulier <email>caulier_dot_gilles_at_free.fr</email> and Gerhard Kulzer <email>gerhard_at_kulzer.net</email>.
+All Pictures copyrighted 2004-2007 by Gilles Caulier <email>caulier dot gilles at gmail dot com</email> and Gerhard Kulzer <email>gerhard_at_kulzer.net</email>.
 </para>
 
 &underFDL;
