--- a/cdarchiving.docbook
+++ b/cdarchiving.docbook
@@ -8,7 +8,7 @@
 <firstname>Gilles</firstname>
 <surname>Caulier</surname>
 <affiliation>
-<address><email>caulier dot gilles at free.fr</email></address>
+<address><email>caulier dot gilles at gmail dot com</email></address>
 </affiliation>
 </author>
 </authorgroup>
