--- a/flickrexport.docbook
+++ b/flickrexport.docbook
@@ -11,7 +11,7 @@
     
     <author>
         <firstname>Gilles</firstname><surname>Caulier</surname>
-        <affiliation><address><email>caulier dot gilles at free.fr</email></address></affiliation>
+        <affiliation><address><email>caulier dot gilles at gmail dot com</email></address></affiliation>
     </author>
 </authorgroup>
 
