--- a/imagesgallery.docbook
+++ b/imagesgallery.docbook
@@ -6,7 +6,7 @@
 <authorgroup>
     <author>
         <firstname>Gilles</firstname><surname>Caulier</surname>
-        <affiliation><address><email>caulier dot gilles at free.fr</email></address></affiliation>
+        <affiliation><address><email>caulier dot gilles at gmail dot com</email></address></affiliation>
     </author>
     
     <author>
