--- a/mpegencoder.docbook
+++ b/mpegencoder.docbook
@@ -71,7 +71,7 @@ If the plugin complains about encoders or tools missing you can set the path to 
 </para>
 </note>
 
-<figure>
+<figure id="mpegencoder-encoder-dialog">
     <title>The MPEG Encoder Dialog Preview</title>
     <graphic srccredit="The MPEG Encoder Dialog Preview" fileref="mpeg_encode_dialog.png"/>
 </figure>
