--- a/index.docbook
+++ b/index.docbook
@@ -44,9 +44,10 @@
         <firstname>Gerhard</firstname><surname>Kulzer</surname>
         <affiliation><address><email>gerhard_at_kulzer.net</email></address></affiliation>
     </author>
-</authorgroup>
 
 <!-- TRANS:ROLES_OF_TRANSLATORS -->
+
+</authorgroup>
 
 <date>2008-02-13</date>
 <releaseinfo>0.1.3</releaseinfo> <!-- Used Kicker version here -->
@@ -80,7 +81,7 @@ One of the nicest things about KDE photo management programs like "digiKam", "KP
 </para>
 
 <para>
-Kipi plugins are additional functions for the KDE Images Managment Host Programs. They can add extra menus and shortcuts, and extend the host programs features. You can install as many or as few as you like, from within host programs.
+Kipi plugins are additional functions for the &kde; Images Managment Host Programs. They can add extra menus and shortcuts, and extend the host programs features. You can install as many or as few as you like, from within host programs.
 </para>
 
 <para>
@@ -99,7 +100,7 @@ The plugins installed in this handbook are:
 <para><link linkend="calendar">Calendar plugin</link></para>
 </listitem>
 <listitem>
-<para><link linkend="cdarchiving">CD Archiving plugin</link></para>
+<para><link linkend="cdarchiving">&CD; Archiving plugin</link></para>
 </listitem>
 <listitem>
 <para><link linkend="colorimages">Color Images plugin</link></para>
@@ -210,6 +211,8 @@ Copyrights for each plugin is listed in the applicable chapter.
 <para>
 All Pictures copyrighted 2004-2007 by Gilles Caulier <email>caulier dot gilles at gmail dot com</email> and Gerhard Kulzer <email>gerhard_at_kulzer.net</email>.
 </para>
+
+<!-- TRANS:CREDIT_FOR_TRANSLATORS -->
 
 &underFDL;
 &underGPL;
