--- a/mpegencoder.docbook
+++ b/mpegencoder.docbook
@@ -45,7 +45,7 @@ First you have to select the images to be packed into MPEG from the host applica
 </para>
 
 <para>
-The before selected images appear in the <guilabel>Image Files in Portfolio</guilabel> list box. Use this box to order your files or to modify the content of the list.
+The images you have selected earlier appear in the <guilabel>Image Files in Portfolio</guilabel> list box. Use this box to order your files or to modify the content of the list.
 </para>
 
 <para>
@@ -58,11 +58,11 @@ Then you can choose the display duration per image, it scales in seconds. The li
 
 <para>
 The next selector lets you free choose the preferred background color. In doubt leave it black.
-The 'MPEG Output Filename' box specifies the output filename and its path (location). Leave the mpg ending but change the path and filename as you wish.
+The <guilabel>MPEG Output Filename</guilabel> box specifies the output filename and its path (location). Leave the mpg ending but change the path and filename as you wish.
 </para>
 
 <para>
-If you point in the 'Audio Input Filename' to an audio file, it will be integrated into the MPEG file. So if you're done with the setting, click on the <guilabel>Encode</guilabel> button to launch the conversion. Depending on your computer speed go and drink a short or long coffee and enjoy the slideshow when its finished.
+If you point in the <guilabel>Audio Input Filename</guilabel> to an audio file, it will be integrated into the MPEG file. So if you're done with the setting, click on the <guilabel>Encode</guilabel> button to launch the conversion. Depending on your computer speed go and drink a short or long coffee and enjoy the slideshow when its finished.
 </para>
 
 <note>
